# JobFilter

./: .dockerignore  .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  run_pipeline.sh  test.py
apps/cli/: commands.py  fetch.py  resume.py  roles.py
apps/web/: skills.json
scripts/: 01_collect_raw_data.py  02_collect_raw_skills.py  03_collect_skills.py  04_collect_spacy_patterns.py  04_validate_skills.py  utils.py
src/common/: __init__.py  config.py  logging.py  models.py
src/db/: __init__.py  client.py  crud.py
src/engine/: __init__.py  fetch.py  resume.py  roles.py  scores.py
src/job_filter/: main.py
src/job_filter/cli/: commands.py
src/job_filter/client/: fetch.py  models.py
src/job_filter/core/: config.py  logging.py
src/jobspy/: __init__.py  client.py  fetch.py
src/llm/: __init__.py  client.py  responses.py
src/nlp_utils/: __init__.py  matcher.py  models.py  patterns.py
src/spacy/: matcher.py  patterns.py
src/tiktoken/: __init__.py  counter.py  models.py
