[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-filter"
version = "0.1.0"
description = "LLM-powered job filtering and scoring engine"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.15.0",
  "rich>=15.0.0",
  "pydantic>=2.13.0",
  "pydantic-settings>=2.13.0",
  "httpx>=0.28.0",
  "pandas>=2.2.0",
  "python-jobspy>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.0",
  "mypy>=1.20.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
